[package]
name = "spank-tro"
authors = ["Kacper Kowalik <xarthisius.kk@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/transparency-certified/spank-tro"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
eyre = "0.6.8"
slurm-spank = "0.3"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
users = "0.11"
